# load-balancing-nginx-docker

./: .dockerignore  .env  .env.example  .gitignore  DEMO-LINK.txt  Dockerfile  README.md  REPORT.md  docker-compose.yml  presentation.pptx  pyproject.toml
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_initial_items_table.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: health.py  items.py  router.py
app/core/: __init__.py  config.py  logging.py
app/crud/: item.py
app/db/: __init__.py  base.py  session.py
app/models/: item.py
app/schemas/: __init__.py  item.py
nginx/: nginx.conf
tests/: conftest.py  test_health.py  test_items.py
web1/: index.html
web2/: index.html
web3/: index.html
